@@ -138,6 +138,7 @@
 
 * Fixed the allocation of light tracing sampler shared data in hybrid backward/forward path tracing
 * Fixed a problem when using flat instances and OpenCL rendering
+* Fixed/Enabled PhotonGI cache on Mix and GlossyCoatting materials when possible
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
